// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Tabs/> renders correctly if change tab 1`] = `
<div
  className="TabsWrapperStyled__TabsWrapperStyled-kxWKwf kQdeyK"
>
  <div
    className="TabsContentWrapperStyled__TabsContentWrapperStyled-fmMkZg HDXly"
  >
    <div
      className="TabsListStyled__TabsListStyled-jltvsP iRzhNT"
    >
      <div
        className="TabStyled__TabStyled-kKgjJZ jfjewJ"
        onClick={[Function]}
        selected={true}
      >
        <div
          className="TabContentWrapperStyled__TabContentWrapperStyled-drsnLo bNHOuk"
        >
          <div
            className="TabContentStyled__TabContentStyled-eLzkAQ bCjtic"
          >
            <div
              className="TabIconStyled-bYWiJR itwVpr"
              selected={true}
            >
              <svg
                viewBox="0 0 24 24"
              >
                <path
                  d="M20,5.6C20,4.7,19.3,4,18.4,4H5.6C4.7,4,4,4.7,4,5.6v9.6c0,0.9,0.7,1.6,1.6,1.6h11.2L20,20L20,5.6z"
                />
              </svg>
            </div>
            <div
              className="TabTextStyled__TabTextStyled-jbYAge hCrmvf"
            >
              Test 1
            </div>
          </div>
        </div>
      </div>
      <div
        className="TabStyled__TabStyled-kKgjJZ jFBgwR"
        onClick={[Function]}
        selected={false}
      >
        <div
          className="TabContentWrapperStyled__TabContentWrapperStyled-drsnLo bNHOuk"
        >
          <div
            className="TabContentStyled__TabContentStyled-eLzkAQ bCjtic"
          >
            <div
              className="TabIconStyled-bYWiJR dkIYyn"
              selected={false}
            >
              <svg
                viewBox="0 0 24 24"
              >
                <path
                  d="M20,5.6C20,4.7,19.3,4,18.4,4H5.6C4.7,4,4,4.7,4,5.6v9.6c0,0.9,0.7,1.6,1.6,1.6h11.2L20,20L20,5.6z"
                />
              </svg>
            </div>
            <div
              className="TabTextStyled__TabTextStyled-jbYAge hCrmvf"
            >
              Test 2
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<Tabs/> renders correctly if change tab 2`] = `
<div
  className="TabsWrapperStyled__TabsWrapperStyled-kxWKwf kQdeyK"
>
  <div
    className="TabsContentWrapperStyled__TabsContentWrapperStyled-fmMkZg HDXly"
  >
    <div
      className="TabsListStyled__TabsListStyled-jltvsP iRzhNT"
    >
      <div
        className="TabStyled__TabStyled-kKgjJZ jFBgwR"
        onClick={[Function]}
        selected={false}
      >
        <div
          className="TabContentWrapperStyled__TabContentWrapperStyled-drsnLo bNHOuk"
        >
          <div
            className="TabContentStyled__TabContentStyled-eLzkAQ bCjtic"
          >
            <div
              className="TabIconStyled-bYWiJR dkIYyn"
              selected={false}
            >
              <svg
                viewBox="0 0 24 24"
              >
                <path
                  d="M20,5.6C20,4.7,19.3,4,18.4,4H5.6C4.7,4,4,4.7,4,5.6v9.6c0,0.9,0.7,1.6,1.6,1.6h11.2L20,20L20,5.6z"
                />
              </svg>
            </div>
            <div
              className="TabTextStyled__TabTextStyled-jbYAge hCrmvf"
            >
              Test 1
            </div>
          </div>
        </div>
      </div>
      <div
        className="TabStyled__TabStyled-kKgjJZ jfjewJ"
        onClick={[Function]}
        selected={true}
      >
        <div
          className="TabContentWrapperStyled__TabContentWrapperStyled-drsnLo bNHOuk"
        >
          <div
            className="TabContentStyled__TabContentStyled-eLzkAQ bCjtic"
          >
            <div
              className="TabIconStyled-bYWiJR itwVpr"
              selected={true}
            >
              <svg
                viewBox="0 0 24 24"
              >
                <path
                  d="M20,5.6C20,4.7,19.3,4,18.4,4H5.6C4.7,4,4,4.7,4,5.6v9.6c0,0.9,0.7,1.6,1.6,1.6h11.2L20,20L20,5.6z"
                />
              </svg>
            </div>
            <div
              className="TabTextStyled__TabTextStyled-jbYAge hCrmvf"
            >
              Test 2
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<Tabs/> renders correctly if prop  1`] = `
<div
  className="TabsWrapperStyled__TabsWrapperStyled-kxWKwf kQdeyK"
>
  <div
    className="TabsContentWrapperStyled__TabsContentWrapperStyled-fmMkZg HDXly"
  >
    <div
      className="TabsListStyled__TabsListStyled-jltvsP iRzhNT"
    >
      <a
        href="test1"
        onClick={[Function]}
      >
        <div
          className="TabStyled__TabStyled-kKgjJZ jfjewJ"
          onClick={[Function]}
          selected={true}
        >
          <div
            className="TabContentWrapperStyled__TabContentWrapperStyled-drsnLo bNHOuk"
          >
            <div
              className="TabContentStyled__TabContentStyled-eLzkAQ bCjtic"
            >
              <div
                className="TabTextStyled__TabTextStyled-jbYAge cybLXN"
              >
                Test1
              </div>
            </div>
          </div>
        </div>
      </a>
      <a
        href="test2"
        onClick={[Function]}
      >
        <div
          className="TabStyled__TabStyled-kKgjJZ jFBgwR"
          onClick={[Function]}
          selected={false}
        >
          <div
            className="TabContentWrapperStyled__TabContentWrapperStyled-drsnLo bNHOuk"
          >
            <div
              className="TabContentStyled__TabContentStyled-eLzkAQ bCjtic"
            >
              <div
                className="TabTextStyled__TabTextStyled-jbYAge cybLXN"
              >
                Test2
              </div>
            </div>
          </div>
        </div>
      </a>
    </div>
  </div>
</div>
`;

exports[`<Tabs/> renders correctly if prop icon 1`] = `
<div
  className="TabsWrapperStyled__TabsWrapperStyled-kxWKwf kQdeyK"
>
  <div
    className="TabsContentWrapperStyled__TabsContentWrapperStyled-fmMkZg HDXly"
  >
    <div
      className="TabsListStyled__TabsListStyled-jltvsP iRzhNT"
    >
      <div
        className="TabStyled__TabStyled-kKgjJZ jfjewJ"
        onClick={[Function]}
        selected={true}
      >
        <div
          className="TabContentWrapperStyled__TabContentWrapperStyled-drsnLo bNHOuk"
        >
          <div
            className="TabContentStyled__TabContentStyled-eLzkAQ bCjtic"
          >
            <div
              className="TabIconStyled-bYWiJR itwVpr"
              selected={true}
            >
              <svg
                viewBox="0 0 24 24"
              >
                <path
                  d="M20,5.6C20,4.7,19.3,4,18.4,4H5.6C4.7,4,4,4.7,4,5.6v9.6c0,0.9,0.7,1.6,1.6,1.6h11.2L20,20L20,5.6z"
                />
              </svg>
            </div>
            <div
              className="TabTextStyled__TabTextStyled-jbYAge hCrmvf"
            >
              Test
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<Tabs/> renders correctly if prop linkComponent passed 1`] = `
<div
  className="TabsWrapperStyled__TabsWrapperStyled-kxWKwf kQdeyK"
>
  <div
    className="TabsContentWrapperStyled__TabsContentWrapperStyled-fmMkZg HDXly"
  >
    <div
      className="TabsListStyled__TabsListStyled-jltvsP iRzhNT"
    >
      <a
        href="/"
        onClick={[Function]}
      >
        <div
          className="TabStyled__TabStyled-kKgjJZ jfjewJ"
          onClick={[Function]}
          selected={true}
        >
          <div
            className="TabContentWrapperStyled__TabContentWrapperStyled-drsnLo bNHOuk"
          >
            <div
              className="TabContentStyled__TabContentStyled-eLzkAQ bCjtic"
            >
              <div
                className="TabTextStyled__TabTextStyled-jbYAge cybLXN"
              >
                Test
              </div>
            </div>
          </div>
        </div>
      </a>
    </div>
  </div>
</div>
`;

exports[`<Tabs/> renders correctly if prop selected set 1 1`] = `
<div
  className="TabsWrapperStyled__TabsWrapperStyled-kxWKwf kQdeyK"
>
  <div
    className="TabsContentWrapperStyled__TabsContentWrapperStyled-fmMkZg HDXly"
  >
    <div
      className="TabsListStyled__TabsListStyled-jltvsP iRzhNT"
    >
      <div
        className="TabStyled__TabStyled-kKgjJZ jFBgwR"
        onClick={[Function]}
        selected={false}
      >
        <div
          className="TabContentWrapperStyled__TabContentWrapperStyled-drsnLo bNHOuk"
        >
          <div
            className="TabContentStyled__TabContentStyled-eLzkAQ bCjtic"
          >
            <div
              className="TabTextStyled__TabTextStyled-jbYAge cybLXN"
            >
              Test
            </div>
          </div>
        </div>
      </div>
      <div
        className="TabStyled__TabStyled-kKgjJZ jfjewJ"
        onClick={[Function]}
        selected={true}
      >
        <div
          className="TabContentWrapperStyled__TabContentWrapperStyled-drsnLo bNHOuk"
        >
          <div
            className="TabContentStyled__TabContentStyled-eLzkAQ bCjtic"
          >
            <div
              className="TabTextStyled__TabTextStyled-jbYAge cybLXN"
            >
              Test
            </div>
          </div>
        </div>
      </div>
      <div
        className="TabStyled__TabStyled-kKgjJZ jFBgwR"
        onClick={[Function]}
        selected={false}
      >
        <div
          className="TabContentWrapperStyled__TabContentWrapperStyled-drsnLo bNHOuk"
        >
          <div
            className="TabContentStyled__TabContentStyled-eLzkAQ bCjtic"
          >
            <div
              className="TabTextStyled__TabTextStyled-jbYAge cybLXN"
            >
              Test
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<Tabs/> renders correctly if prop selected set after render 1`] = `
<div
  className="TabsWrapperStyled__TabsWrapperStyled-kxWKwf kQdeyK"
>
  <div
    className="TabsContentWrapperStyled__TabsContentWrapperStyled-fmMkZg HDXly"
  >
    <div
      className="TabsListStyled__TabsListStyled-jltvsP iRzhNT"
    >
      <div
        className="TabStyled__TabStyled-kKgjJZ jFBgwR"
        onClick={[Function]}
        selected={false}
      >
        <div
          className="TabContentWrapperStyled__TabContentWrapperStyled-drsnLo bNHOuk"
        >
          <div
            className="TabContentStyled__TabContentStyled-eLzkAQ bCjtic"
          >
            <div
              className="TabTextStyled__TabTextStyled-jbYAge cybLXN"
            >
              Test
            </div>
          </div>
        </div>
      </div>
      <div
        className="TabStyled__TabStyled-kKgjJZ jFBgwR"
        onClick={[Function]}
        selected={false}
      >
        <div
          className="TabContentWrapperStyled__TabContentWrapperStyled-drsnLo bNHOuk"
        >
          <div
            className="TabContentStyled__TabContentStyled-eLzkAQ bCjtic"
          >
            <div
              className="TabTextStyled__TabTextStyled-jbYAge cybLXN"
            >
              Test
            </div>
          </div>
        </div>
      </div>
      <div
        className="TabStyled__TabStyled-kKgjJZ jfjewJ"
        onClick={[Function]}
        selected={true}
      >
        <div
          className="TabContentWrapperStyled__TabContentWrapperStyled-drsnLo bNHOuk"
        >
          <div
            className="TabContentStyled__TabContentStyled-eLzkAQ bCjtic"
          >
            <div
              className="TabTextStyled__TabTextStyled-jbYAge cybLXN"
            >
              Test
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<Tabs/> renders correctly if prop selected set after render 2`] = `
<div
  className="TabsWrapperStyled__TabsWrapperStyled-kxWKwf kQdeyK"
>
  <div
    className="TabsContentWrapperStyled__TabsContentWrapperStyled-fmMkZg HDXly"
  >
    <div
      className="TabsListStyled__TabsListStyled-jltvsP iRzhNT"
    >
      <div
        className="TabStyled__TabStyled-kKgjJZ jFBgwR"
        onClick={[Function]}
        selected={false}
      >
        <div
          className="TabContentWrapperStyled__TabContentWrapperStyled-drsnLo bNHOuk"
        >
          <div
            className="TabContentStyled__TabContentStyled-eLzkAQ bCjtic"
          >
            <div
              className="TabTextStyled__TabTextStyled-jbYAge cybLXN"
            >
              Test
            </div>
          </div>
        </div>
      </div>
      <div
        className="TabStyled__TabStyled-kKgjJZ jfjewJ"
        onClick={[Function]}
        selected={true}
      >
        <div
          className="TabContentWrapperStyled__TabContentWrapperStyled-drsnLo bNHOuk"
        >
          <div
            className="TabContentStyled__TabContentStyled-eLzkAQ bCjtic"
          >
            <div
              className="TabTextStyled__TabTextStyled-jbYAge cybLXN"
            >
              Test
            </div>
          </div>
        </div>
      </div>
      <div
        className="TabStyled__TabStyled-kKgjJZ jFBgwR"
        onClick={[Function]}
        selected={false}
      >
        <div
          className="TabContentWrapperStyled__TabContentWrapperStyled-drsnLo bNHOuk"
        >
          <div
            className="TabContentStyled__TabContentStyled-eLzkAQ bCjtic"
          >
            <div
              className="TabTextStyled__TabTextStyled-jbYAge cybLXN"
            >
              Test
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<Tabs/> renders correctly if prop text is empty 1`] = `
<div
  className="TabsWrapperStyled__TabsWrapperStyled-kxWKwf kQdeyK"
>
  <div
    className="TabsContentWrapperStyled__TabsContentWrapperStyled-fmMkZg HDXly"
  >
    <div
      className="TabsListStyled__TabsListStyled-jltvsP iRzhNT"
    >
      <div
        className="TabStyled__TabStyled-kKgjJZ jfjewJ"
        onClick={[Function]}
        selected={true}
      >
        <div
          className="TabContentWrapperStyled__TabContentWrapperStyled-drsnLo bNHOuk"
        >
          <div
            className="TabContentStyled__TabContentStyled-eLzkAQ bCjtic"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<Tabs/> renders correctly with default props 1`] = `
<div
  className="TabsWrapperStyled__TabsWrapperStyled-kxWKwf kQdeyK"
>
  <div
    className="TabsContentWrapperStyled__TabsContentWrapperStyled-fmMkZg HDXly"
  >
    <div
      className="TabsListStyled__TabsListStyled-jltvsP iRzhNT"
    />
  </div>
</div>
`;
